src/nationalarchives/components/card/card.scss
@use "sass:math";
@use "../../variables/a11y" as a11yVariables;
@use "../../variables/borders";
@use "../../tools/a11y";
@use "../../tools/colour";
@use "../../tools/media";
@use "../../tools/spacing";
@use "../../tools/typography";

@mixin horizontal-card-layout($modifierClass, $innerPaddingAmount) {
  &#{$modifierClass} {
    padding-bottom: 0;

    display: grid;
    grid-template: min-content 1fr / 50% 50%;
    grid-template-areas:
      "image header"
      "image body";
    gap: 0;

    > * + * {
      margin-top: spacing.space(1);
    }

    > :first-child {
      padding-top: spacing.space($innerPaddingAmount);
    }

    > :last-child {
      padding-bottom: spacing.space($innerPaddingAmount);
    }
  }

  &#{$modifierClass}:not(:has(&__image-container)) {
    grid-template-columns: 0 100%;
  }

  &#{$modifierClass}#{&}--flipped {
    grid-template-areas:
      "header image"
      "body image"
      "footer image";
  }

  &#{$modifierClass}#{&}--flipped:not(:has(&__image-container)) {
    grid-template-columns: 100% 0;
  }

  &#{$modifierClass} &__heading,
  &#{$modifierClass} &__body {
    padding-right: spacing.space($innerPaddingAmount);
    padding-left: spacing.space($innerPaddingAmount);
  }

  &#{$modifierClass} &__heading {
    grid-area: header;
  }

  &#{$modifierClass} &__image-container {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;

    grid-area: image;
  }

  &#{$modifierClass} &__body {
    grid-area: body;
  }
}

.tna-card {
  @include spacing.space-above;

  display: flex;
  flex-direction: column;
  gap: spacing.space(1);

  position: relative;

  &:not(:has(&__image-container)) {
    padding-top: spacing.space(0.5);

    @include colour.thick-keyline-dark(top);
  }

  &__heading {
    order: 2;
  }

  &--full-click {
    border-radius: 0.1px;

    &:hover {
      @include colour.colour-outline("keyline", 1px, solid);
      outline-offset: a11yVariables.$focus-outline-width - 1px;
    }

    &:focus,
    &:active {
      outline: none;
    }
  }

  &--full-click &__heading-link {
    &::before {
      content: "";

      position: absolute;
      inset: 0;
      z-index: 3;

      border-radius: 0.1px;
    }

    &:focus-visible,
    &:active {
      outline: none;

      &::before {
        @include a11y.focus-outline;
      }
    }

    &:active {
      &::before {
        @include a11y.active-outline;
      }
    }
  }

  &--full-click:not(:has(&__image-container)) &__heading-link {
    &::before {
      top: -#{borders.$thick-border-width};
    }
  }

  &__image-container {
    aspect-ratio: 3/2;

    order: 1;

    position: relative;

    @include colour.image-loader-background;
  }

  &__image {
    position: absolute;
    inset: 0;
    z-index: 1;

    img {
      width: 100%;
      height: 100%;

      object-fit: cover;
    }
  }

  &__image-label {
    position: absolute;
    top: spacing.space(0.5);
    left: spacing.space(0.5);
    z-index: 2;
  }

  &__body {
    order: 3;

    display: flex;
    flex-direction: column;

    gap: spacing.space(1);

    > * {
      margin-top: 0;
    }
  }

  &__actions {
    display: flex;
    gap: spacing.space(1) spacing.space(2);
  }

  &__action {
    @include typography.main-font-weight-bold;
  }

  &--padded {
    padding-bottom: spacing.space(1);
  }

  &--padded &__heading,
  &--padded &__body {
    padding-right: spacing.space(1);
    padding-left: spacing.space(1);
  }

  @include media.on-larger-than-mobile {
    @include horizontal-card-layout("--horizontal", 2);

    &--horizontal-small-image {
      grid-template-columns: max(10rem, 25%) 1fr;
    }

    &--horizontal-small-image#{&}--flipped {
      grid-template-columns: 1fr max(10rem, 25%);
    }
  }

  @include media.on-small {
    @include horizontal-card-layout("--horizontal-on-small", 1);

    &--horizontal-small-image {
      grid-template-columns: max(10rem, 25%) 1fr;
    }

    &--horizontal-small-image#{&}--flipped {
      grid-template-columns: 1fr max(10rem, 25%);
    }
  }

  @include colour.on-high-contrast {
    @include colour.colour-border("keyline-dark", 1px, solid, "", true);
  }
}

